3. Коллекции. Доп. задача